tests/baselines/reference/noImplicitAnyDestructuringVarDeclaration2.errors.txt
tests/cases/compiler/noImplicitAnyDestructuringVarDeclaration2.ts(1,6): error TS7031: Binding element 'a' implicitly has an 'any' type.
tests/cases/compiler/noImplicitAnyDestructuringVarDeclaration2.ts(1,9): error TS7031: Binding element 'b' implicitly has an 'any' type.
tests/cases/compiler/noImplicitAnyDestructuringVarDeclaration2.ts(1,12): error TS7031: Binding element 'c' implicitly has an 'any' type.
tests/cases/compiler/noImplicitAnyDestructuringVarDeclaration2.ts(3,6): error TS7031: Binding element 'a2' implicitly has an 'any' type.
tests/cases/compiler/noImplicitAnyDestructuringVarDeclaration2.ts(3,22): error TS7031: Binding element 'b2' implicitly has an 'any' type.
tests/cases/compiler/noImplicitAnyDestructuringVarDeclaration2.ts(3,38): error TS7031: Binding element 'c2' implicitly has an 'any' type.
tests/cases/compiler/noImplicitAnyDestructuringVarDeclaration2.ts(5,6): error TS7031: Binding element 'a4' implicitly has an 'any' type.
tests/cases/compiler/noImplicitAnyDestructuringVarDeclaration2.ts(5,31): error TS7031: Binding element 'b4' implicitly has an 'any' type.
tests/cases/compiler/noImplicitAnyDestructuringVarDeclaration2.ts(7,6): error TS7031: Binding element 'x' implicitly has an 'any' type.
tests/cases/compiler/noImplicitAnyDestructuringVarDeclaration2.ts(7,9): error TS7031: Binding element 'y' implicitly has an 'any' type.
tests/cases/compiler/noImplicitAnyDestructuringVarDeclaration2.ts(7,12): error TS7031: Binding element 'z' implicitly has an 'any' type.
tests/cases/compiler/noImplicitAnyDestructuringVarDeclaration2.ts(9,6): error TS7031: Binding element 'x2' implicitly has an 'any' type.
tests/cases/compiler/noImplicitAnyDestructuringVarDeclaration2.ts(9,22): error TS7031: Binding element 'y2' implicitly has an 'any' type.
tests/cases/compiler/noImplicitAnyDestructuringVarDeclaration2.ts(9,38): error TS7031: Binding element 'z2' implicitly has an 'any' type.
tests/cases/compiler/noImplicitAnyDestructuringVarDeclaration2.ts(11,6): error TS7031: Binding element 'x4' implicitly has an 'any' type.
tests/cases/compiler/noImplicitAnyDestructuringVarDeclaration2.ts(11,37): error TS7031: Binding element 'y4' implicitly has an 'any' type.


==== tests/cases/compiler/noImplicitAnyDestructuringVarDeclaration2.ts (16 errors) ====
    let [a, b, c] = [1, 2, 3]; // no error
         ~
!!! error TS7031: Binding element 'a' implicitly has an 'any' type.
            ~
!!! error TS7031: Binding element 'b' implicitly has an 'any' type.
               ~
!!! error TS7031: Binding element 'c' implicitly has an 'any' type.
    let [a1 = 10, b1 = 10, c1 = 10] = [1, 2, 3]; // no error
    let [a2 = undefined, b2 = undefined, c2 = undefined] = [1, 2, 3]; // no error
         ~~
!!! error TS7031: Binding element 'a2' implicitly has an 'any' type.
                         ~~
!!! error TS7031: Binding element 'b2' implicitly has an 'any' type.
                                         ~~
!!! error TS7031: Binding element 'c2' implicitly has an 'any' type.
    let [a3 = <any>undefined, b3 = <any>null, c3 = <any>undefined] = [1, 2, 3]; // no error
    let [a4] = [<any>undefined], [b4] = [<any>null], c4 = <any>undefined, d4 = <any>null; // no error
         ~~
!!! error TS7031: Binding element 'a4' implicitly has an 'any' type.
                                  ~~
!!! error TS7031: Binding element 'b4' implicitly has an 'any' type.
    
    let {x, y, z} = { x: 1, y: 2, z: 3 }; // no error
         ~
!!! error TS7031: Binding element 'x' implicitly has an 'any' type.
            ~
!!! error TS7031: Binding element 'y' implicitly has an 'any' type.
               ~
!!! error TS7031: Binding element 'z' implicitly has an 'any' type.
    let {x1 = 10, y1 = 10, z1 = 10} = { x1: 1, y1: 2, z1: 3 }; // no error
    let {x2 = undefined, y2 = undefined, z2 = undefined} = { x2: 1, y2: 2, z2: 3 }; // no error
         ~~
!!! error TS7031: Binding element 'x2' implicitly has an 'any' type.
                         ~~
!!! error TS7031: Binding element 'y2' implicitly has an 'any' type.
                                         ~~
!!! error TS7031: Binding element 'z2' implicitly has an 'any' type.
    let {x3 = <any>undefined, y3 = <any>null, z3 = <any>undefined} = { x3: 1, y3: 2, z3: 3 }; // no error
    let {x4} = { x4: <any>undefined }, {y4} = { y4: <any>null }; // no error
         ~~
!!! error TS7031: Binding element 'x4' implicitly has an 'any' type.
                                        ~~
!!! error TS7031: Binding element 'y4' implicitly has an 'any' type.
    